--- a/team_qwe/src/main/resources/templates/userdata/generateUserPortfolio.html
+++ b/team_qwe/src/main/resources/templates/userdata/generateUserPortfolio.html
@@ -9,36 +9,19 @@
 <style type="text/css">
         body {
               background-color: #8E8F92;
-              margin-left: 20%;
-              margin-right: 20%;
-              text-align: left;
-              border: 2px dotted black;
+              margin-left: 30%;
+              margin-right: 30%;
+              text-align: center;
               padding: 20px 20px 20px 20px;
               font-family: sans-serif;
         }
-        submit {
-              color: black;
-              padding: 15px 32px;
-              text-align: center;
-              text-decoration: none;
-              display: inline-block;
-              font-size: 16px;
-              margin: 4px 2px;
-              cursor: pointer;
-        }
-        table {
+        table.table2 {
                border-collapse: collapse;
                width: 100%;
         }
-        th, td {
+        table.table2 td {
                 padding: 0.25rem;
-                text-align: left;
                 border: 1px solid #ccc;
-        }
-        caption {
-                font-size: 110%;
-                font-style: italic;
-                padding-bottom: 12px;
         }
         .center {
                 text-align: center;
@@ -46,59 +29,61 @@
         .right {
                 text-align: right;
         }
-        .left {
-                text-align: left;
-        }
 </style>
 <body>
 
-<h3 style="text-align: center;">Generate portfolio</h3>
-
-<td th:if="${users != null}">
-    <form action="/userdata/generateUserPortfolio" th:object="${request}" method="post">
-        <select name="request">
-            <option th:each="user : ${users}" th:text="${user}"></option>
-        </select>
-        <br>
-        <br>
-        <input type="submit" style="font-size: 100%;" value="Select" name="Submit"/>
-    </form>
-</td>
-
-<table>
-    <caption th:text="${request.userName}"></caption>
-    <tr>
-        <td class="center">TICKER</td>
-        <td class="center">NAME</td>
-        <td class="center">AMOUNT</td>
-        <td class="center">PURCHASE PRICE</td>
-    </tr>
+<fieldset>
+    <legend style="padding-bottom: 5px;">GENERATE PORTFOLIO</legend>
+    <td th:if="${users != null}">
+        <table style="margin-left: auto; margin-right: auto;">
+            <form action="/userdata/generateUserPortfolio" th:object="${request}" method="post">
+                <tr>
+                    <td>Choose user:</td>
+                    <td><select name="request">
+                        <option th:each="user : ${users}" th:text="${user}"></option>
+                    </select></td>
+                    <td><input type="submit" value="Select" name="Submit"/></td>
+                </tr>
+            </form>
+        </table>
+    </td>
 
     <td th:if="${portfolio != null}">
-        <tr th:each="position : ${portfolio}">
-            <td th:text="${position.security.ticker}"></td>
-            <td th:text="${position.security.name}"></td>
-            <td class="right" th:text="${position.amount}"></td>
-            <td class="right" th:text="${position.purchasePrice}"></td>
+        <table class="table2">
+            <caption th:text="${request.userName}"></caption>
+            <tr>
+                <td class="center">TICKER</td>
+                <td class="center">NAME</td>
+                <td class="center">AMOUNT</td>
+                <td class="center">PURCHASE PRICE</td>
+            </tr>
+
+            <td th:if="${portfolio != null}">
+                <tr th:each="position : ${portfolio}">
+                    <td th:text="${position.security.ticker}"></td>
+                    <td th:text="${position.security.name}"></td>
+                    <td class="right" th:text="${position.amount}"></td>
+                    <td class="right" th:text="${position.purchasePrice}"></td>
+                </tr>
+            </td>
+        </table>
+        <br>
+        <tr>CASH:</tr>
+        <tr th:text="${cash}"></tr>
+    </td>
+
+    <td th:if="${errors != null}">
+        <br>
+        <tr th:each="error : ${errors}">
+            <td th:text="${error.field}"></td>
+            <td th:text="${error.message}"></td>
         </tr>
     </td>
-</table>
+</fieldset>
 <br>
-<tr>CASH:</tr>
-<tr th:text="${cash}"></tr>
-
-<td th:if="${errors != null}">
-    <br>
-    <tr th:each="error : ${errors}">
-        <td th:text="${error.field}"></td>
-        <td th:text="${error.message}"></td>
-    </tr>
-</td>
 
 <form action="/userMenu" method="get">
-    <br>
-    <br>
-    <input type="submit" style="font-size: 100%;" value="Return to User menu" name="Submit"/>
+    <input type="submit" style="float: right;" value="Back" name="Submit"/>
 </form>
 
 </body>
