--- a/team_qwe/src/main/resources/templates/userdata/getUserList.html
+++ b/team_qwe/src/main/resources/templates/userdata/getUserList.html
@@ -9,26 +9,22 @@
 <style type="text/css">
         body {
               background-color: #8E8F92;
-              margin-left: 20%;
-              margin-right: 20%;
+              margin-left: 25%;
+              margin-right: 25%;
               text-align: center;
-              border: 2px dotted black;
               padding: 20px 20px 20px 20px;
               font-family: sans-serif;
         }
         table {
                border-collapse: collapse;
-               width: 100%;
+               width: 80%;
+               margin-left: auto;
+               margin-right: auto;
         }
         th, td {
                 padding: 0.25rem;
                 text-align: left;
                 border: 1px solid #ccc;
-        }
-        caption {
-                font-size: 110%;
-                font-style: italic;
-                padding-bottom: 12px;
         }
         .center {
                 text-align: center;
@@ -36,44 +32,42 @@
         .right {
                 text-align: right;
         }
-
 </style>
 <body>
 
-<h3 style="text-align: center;">Show all users</h3>
-
-<table>
-    <caption>User list</caption>
-    <tr>
-        <td class="center">ID</td>
-        <td class="center">NAME</td>
-        <td class="center">AGE</td>
-        <td class="center">TYPE</td>
-        <td class="center">INITIAL INVESTMENT</td>
-        <td class="center">CASH</td>
-        <td class="center">PORTFOLIO GENERATION DATE</td>
-        <td class="center">RISK TOLERANCE</td>
-    </tr>
-
-    <td th:if="${users != null}">
-        <tr th:each="user : ${users}">
-            <td th:text="${user.id}"></td>
-            <td th:text="${user.name}"></td>
-            <td class="right" th:text="${user.age}"></td>
-            <td class="center" th:text="${user.type}"></td>
-            <td class="right" th:text="${user.initialInvestment}"></td>
-            <td class="right" th:text="${T(lv.javaguru.java2.qwe.core.utils.UtilityMethods).round(user.cash)}"></td>
-            <td class="right" th:text="${user.portfolioGenerationDate}"></td>
-            <td class="center" th:text="${user.riskTolerance}"></td>
+<fieldset>
+    <legend style="padding-bottom: 5px;">SHOW ALL USERS</legend>
+    <table>
+        <tr>
+            <td class="center">ID</td>
+            <td class="center">NAME</td>
+            <td class="center">AGE</td>
+            <td class="center">TYPE</td>
+            <td class="center">INITIAL INVESTMENT</td>
+            <td class="center">CASH</td>
+            <td class="center">PORTFOLIO GENERATION DATE</td>
+            <td class="center">RISK TOLERANCE</td>
         </tr>
-    </td>
 
-</table>
+        <td th:if="${users != null}">
+            <tr th:each="user : ${users}">
+                <td th:text="${user.id}"></td>
+                <td th:text="${user.name}"></td>
+                <td class="right" th:text="${user.age}"></td>
+                <td class="center" th:text="${user.type}"></td>
+                <td class="right" th:text="${user.initialInvestment}"></td>
+                <td class="right" th:text="${T(lv.javaguru.java2.qwe.core.utils.UtilityMethods).round(user.cash)}"></td>
+                <td class="right" th:text="${user.portfolioGenerationDate}"></td>
+                <td class="center" th:text="${user.riskTolerance}"></td>
+            </tr>
+        </td>
+
+    </table>
+</fieldset>
+<br>
 
 <form action="/userMenu" method="get">
-    <br>
-    <br>
-    <input type="submit" style="font-size: 100%;" value="Return to User menu" name="Submit"/>
+    <input type="submit" style="float: right;" value="Back" name="Submit"/>
 </form>
 
 </body>
