qwe finance project - GetUserPortfolioSummaryService added to Web; - some minor refactoring;

--- a/team_qwe/src/main/resources/templates/userMenu.html
+++ b/team_qwe/src/main/resources/templates/userMenu.html
@@ -77,6 +77,11 @@
             </a></td>
         </tr>
         <tr>
+            <td><a href="/userdata/getUserPortfolioSummary">
+                <button class="/" style="width: 100%;">SHOW USER PORTFOLIO SUMMARY</button>
+            </a></td>
+        </tr>
+        <tr>
             <td><a href="../">
                 <button class="/" style="width: 100%;">RETURN TO MAIN MENU</button>
             </a></td>
