--- a/team_oddJobs/src/main/resources/templates/removeAdvertisement.html
+++ b/team_oddJobs/src/main/resources/templates/removeAdvertisement.html
@@ -49,6 +49,10 @@ body {
         <td th:text="${error.message}" />
     </tr>
 </td>
+<form action="/" method="get">
+    <br>
+    <input type="submit" style="font-size: 100%;" value="Back to main page" name="Submit"/>
+</form>
 </body>
 
 </html>
