--- a/team_jg_entertainment/src/main/resources/templates/menu/searchMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/menu/searchMenu.html
@@ -16,11 +16,11 @@
         background-size: cover;
         border-spacing: 15px;
         border-collapse: separate;
-}
+    }
     h2 {
         color: MediumVioletRed;
         text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-}
+    }
     input[type=text] {
         width: 130px;
         box-sizing: border-box;
@@ -32,19 +32,18 @@
         padding: 12px 20px 12px 40px;
         -webkit-transition: width 0.4s ease-in-out;
         transition: width 0.4s ease-in-out;
-}
+    }
     input[type=text]:focus {
         width: 100%;
-}
+
     p {
         font-family: "Trebuchet MS", Verdana, sans-serif;
         list-style-position: left;
-}
+    }
     th, td {
         padding: 8px;
         text-align: left;
         border-bottom: 1px solid #ddd;
-}
 
 </style>
 
@@ -81,12 +80,12 @@
     </td>
 </table>
 
-<td th:if="${errors != null}">
+<big><td th:if="${errors != null}">
     <tr th:each="error : ${errors}">
         <td th:text="${error.field}"></td>
         <td th:text="${error.description}"></td>
     </tr>
-</td>
+</td></big>
 
 <form action="/" method="get">
     <input type="submit" value="Main menu" name="Submit"
