--- a/team_jg_entertainment/src/main/resources/templates/table/searchTable.html
+++ b/team_jg_entertainment/src/main/resources/templates/table/searchTable.html
@@ -14,20 +14,20 @@
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: cover;
-}
+    }
     h2 {
         color: MediumVioletRed;
         text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-}
+    }
     p {
         font-family: "Trebuchet MS", Verdana, sans-serif;
         list-style-position: left;
-}
+    }
     th, td {
         padding: 8px;
         text-align: left;
         border-bottom: 1px solid #ddd;
-}
+    }
 </style>
 
 <body>
@@ -64,12 +64,12 @@
     </td>
 </table>
 
-<td th:if="${errors != null}">
+<big><td th:if="${errors != null}">
     <tr th:each="error : ${errors}">
         <td th:text="${error.field}"></td>
         <td th:text="${error.description}"></td>
     </tr>
-</td>
+</td></big>
 
 <form action="/" method="get">
     <input type="submit" value="Main menu" name="Submit"
