--- a/team_jg_entertainment/src/main/resources/templates/user/addUser.html
+++ b/team_jg_entertainment/src/main/resources/templates/user/addUser.html
@@ -15,14 +15,14 @@
           background-repeat: no-repeat;
           background-attachment: fixed;
           background-size: cover;
-}
+      }
       h2 {
           color: MediumVioletRed;
           text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
           width:750px;
           text-align:center;
           text-indent:200px;
-}
+      }
 </style>
 
 <body>
@@ -47,16 +47,16 @@
     </tr>
 </table>
 
-<td th:if="${errors != null}">
+<big><td th:if="${errors != null}">
     <tr th:each="error : ${errors}">
         <td th:text="${error.field}"></td>
         <td th:text="${error.description}"></td>
     </tr>
-</td>
+</td></big>
 
-<td th:if="${errors == null}">
+<big><td th:if="${errors == null}">
     <tr th:text="${message}"></tr>
-</td>
+</td></big>
 
 
 <form action="/" method="get">
