--- a/team_jg_entertainment/src/main/resources/templates/table/updateTable.html
+++ b/team_jg_entertainment/src/main/resources/templates/table/updateTable.html
@@ -14,14 +14,14 @@
           background-repeat: no-repeat;
           background-attachment: fixed;
           background-size: cover;
-}
+      }
       h2 {
           color: MediumVioletRed;
           text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
           width:750px;
           text-align:center;
           text-indent:200px;
-}
+      }
 </style>
 
 <body>
@@ -35,7 +35,6 @@
         <td><big>NEW Capacity:</big></td>
         <td><big>NEW Price:</big></td>
     </tr>
-
     <tr>
         <form action="/updateTable" th:object="${request}" method="post">
             <td><input type="text" placeholder="Enter....." th:field="${request.id}" style="height:25px;width:250px"/></td>
@@ -49,16 +48,16 @@
         </form>
     </tr>
 
-    <td th:if="${errors != null}">
+    <big>  <td th:if="${errors != null}">
         <tr th:each="error : ${errors}">
             <td th:text="${error.field}"></td>
             <td th:text="${error.messageError}"></td>
         </tr>
-    </td>
+    </td></big>
 
-    <td th:if="${errors == null}">
+    <big><td th:if="${errors == null}">
         <tr th:text="${message}"></tr>
-    </td>
+    </td></big>
 </table>
 
 <form action="/" method="get">
