--- a/team_hospital/src/main/resources/templates/visit/visitActions.html
+++ b/team_hospital/src/main/resources/templates/visit/visitActions.html
@@ -15,9 +15,9 @@
 
 <a href="/addVisit">Add visit to list</a> <br>
 <a href="/deleteVisit">Delete visit from the list</a> <br>
-<a href="/editVisit">Edit patient</a> <br>
-<a href="/showAllVisits">Show all patients in the list</a> <br>
-<a href="/searchVisit">Search patient</a> <br>
+<a href="/editVisit">Edit visit</a> <br>
+<a href="/showAllVisits">Show all visits in the list</a> <br>
+<a href="/searchVisit">Search visit</a> <br>
 
 <form action="/" method="get">
     <input type="submit" value="Main menu" name="Submit" />
