--- a/team_hospital/src/main/resources/templates/patient/searchPatient.html
+++ b/team_hospital/src/main/resources/templates/patient/searchPatient.html
@@ -18,6 +18,10 @@
         <td>Name:</td>
         <td>Surname:</td>
         <td>Personal code:</td>
+        <td>Order by:</td>
+        <td>Order direction:</td>
+        <td>Page number:</td>
+        <td>Page size:</td>
     </tr>
 
     <tr>
@@ -25,11 +29,16 @@
             <td><input type="text" th:field="${request.name}"/></td>
             <td><input type="text" th:field="${request.surname}"/></td>
             <td><input type="text" th:field="${request.personalCode}"/></td>
-            <td>
-                <input type="submit" value="Search Patient"/>
-                <input type="reset" value="Clear"/>
-            </td>
+            <td><input type="text" th:field="${request.orderBy}"/></td>
+            <td><input type="text" th:field="${request.orderDirection}"/></td>
+            <td><input type="text" th:field="${request.pageNumber}"/></td>
+            <td><input type="text" th:field="${request.pageSize}"/></td>
+    <td>
+        <input type="submit" value="Search Patient"/>
+        <input type="reset" value="Clear"/>
+    </td>
         </form>
+    <tr/>
 
     <tr>
         <td>Name:</td>
